fix: make ribbon smaller

--- a/src/components/Ribbon.module.css
+++ b/src/components/Ribbon.module.css
@@ -2,10 +2,11 @@
   overflow: hidden;
   position: fixed;
   bottom: 73px;
-  right: -62px;
+  right: -75px;
   z-index: 10;
-  height: 100px;
+  height: 85px;
   padding: 48px 0 0 0;
+  pointer-events: none;
 }
 
 .line {
